Moved OAuth to the external http daemon and added OAuth2 store